# btc_backtest

./: README.md  pyproject.toml  requirements.txt
src/btc_backtest/: __init__.py  main.py  metrics.csv  report.html
src/btc_backtest/core/: backtester.py  data_loader.py  metrics.py
src/btc_backtest/core/binance/: binance_client.py  cache_manager.py  fetcher.py  parser.py
src/btc_backtest/strategies/: base.py  rsi_bollinger.py  sma_cross.py  volume_spike_breakout.py
tests/: conftest.py  test_binance_fetcher.py  test_cache_manager.py  test_load_checksums.py  test_pairs_fetcher_integration.py  test_parse_kline_zip.py  test_rsi_bollinger_strategy.py  test_sma_crossover_strategy.py  test_strategy.py  test_volume_spike_breakout_strategy.py
